# leptos-build

./: Cargo.toml
leptos_build/: .envrc  Cargo.toml  LICENSE  README.md
leptos_build/.github/workflows/: cd.yml
leptos_build/src/: app.rs  components.rs  errors.rs  lib.rs  main.rs
leptos_build/src/cli/: cli.rs  mod.rs
leptos_build/src/command/: build.rs  mod.rs  new.rs
leptos_build/src/components/: command_output.rs  footer.rs  header.rs  home.rs
leptos_build/src/plugin_host/: host.rs
leptos_build/src/state/: mod.rs  state.rs
leptos_build/src/utils/: deps.rs  mod.rs  path.rs
leptos_build/src/widgets/: app.rs  app_footer.rs  app_header.rs  command_terminal.rs  mod.rs  shell.rs
plugin_api/src/: lib.rs
plugin_api/wit/: leptos-build-plugin.wit
