[package]
name = "leptos_build"
version = "0.1.0"
edition = "2024"

[dependencies]
plugin_api={path="../plugin_api"}
ratatui = "0.29.0"
cargo-manifest = "0.19"
xshell = "0.2.7"
current_platform = "0.2.0"
cargo-generate = "0.23"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
cargo_metadata = { version = "0.18", features = ["builder"] }
figment = { version = "0.10.19", features = ["env", "toml"] }
camino = "1.1"
eyre = "0.6.12"
shlex = "1.3.0"
tokio = { version = "1.45", default-features = false, features = ["full"] }
crossterm = "0.29.0"
parking_lot = "0.12.3"
thiserror = "2.0.12"
tui-term = "0.2.0"
portable-pty = "0.9.0"
vt100 = "0.15.2"

#plugin support
wasmtime = { version="32", features=["component-model", "cranelift", "std", "runtime"] }
wasmtime-wasi = "32.0.0"

#wasm-bindgen
wasm-bindgen-cli-support = "=0.2.100"
wasm-bindgen-shared = "=0.2.100"



